--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.map-wrap {
+    position: relative;
+    height: calc(100vh - 50px);
+    z-index: 1;
+}
+
+.ol-map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+
+
+/* styles.css or in a <style> tag in your component or document head */
+.app-container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+
+
+
+.main-content {
+    flex-grow: 1;
+    overflow-y: auto;
+    /* makes main content scrollable */
+}
+
+.custom-sidebar.expanded {
+    width: 80px;
+    /* Width when the sidebar is expanded */
+}
+
+.custom-sidebar.collapsed {
+    width: 80px;
+    /* Width when the sidebar is collapsed */
 }
