--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,3 +51,22 @@ body {
     width: 80px;
     /* Width when the sidebar is collapsed */
 }
+
+
+.slide-enter {
+    transform: translateX(-60%);
+}
+
+.slide-enter-active {
+    transform: translateX(0);
+    transition: transform 150ms ease-in-out;
+}
+
+.slide-exit {
+    transform: translateX(0);
+}
+
+.slide-exit-active {
+    transform: translateX(-100%);
+    transition: transform 100ms ease-in-out;
+}
